@@ -301,11 +301,27 @@ class SpatzCatalogue(Catalogue):
         d["detrot"] = d["twotheta"]
         d["dz"] = d["twotheta"]
 
+        ###############################################
         # detector longitudinal translation from sample
-        d["dy"] = (
-            h5d["entry1/instrument/detector/detector_distance/pos"][:]
-            - d["sample_distance"]
-        )
+        ###############################################
+        d["dy"] = None
+        try:
+            d["dy"] = (
+                h5d["entry1/instrument/detector/detector_distance/pos"][:]
+                - d["sample_distance"]
+            )
+        except KeyError:
+            # entry was renamed after detector translation was added in 12268
+            pass
+
+        try:
+            d["dy"] = h5d[
+                "entry1/instrument/detector/longitudinal_translation"
+            ][:]
+        except KeyError:
+            pass
+        if d["dy"] is None:
+            raise ValueError("SPZ: dy is not present in the dataset")
 
         # logical size (mm) of 1 pixel in the scattering plane
         try:
