@@ -486,3 +486,4 @@ in 0.1.13.
 - only extract requested keys from catalogue
 - enable cython3 operations
 - change install docs to recommend use of refnx[all]
+- update SPZ reduction for new detector translation
